Suppression de l'Enum TowerTypeDTO
Ajout d'exceptions métier
